# topofocus_realworld

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CENTRAL_DEPLOYMENT.md  CHANGELOG.md  CONTRIBUTING.md  CURRENT_STATUS.md  README.md  RUNBOOK.md  SECURITY.md  SOURCE_MANIFEST.md  THIRD_PARTY_NOTICES.md  command.txt
hub/: .gitignore  README.md  pyproject.toml  requirements-g1.txt
hub/config/: robots.example.json
hub/docs/: COORDINATE_FRAMES.md  LIVE_MAPPING.md  OFFLINE_MAP_VALIDATION.md  ONECLICK_SESSION_WORKFLOW.md  ROBOT_WSJ_AUDIT.md  TINYNAV_NATIVE_MAP_ADAPTER.md  TRANSPORT.md  TRANSPORT_V2_DEMO_DRAFT.md  TRIPLE_AI_REALWORLD_DEMO.md  V2_PHYSICAL_QUICKSTART.md  VLM_LIVE_EXPERIMENT_20260723.md  YUNJI_ODIN1_DEPLOYMENT.md
hub/foxglove/: dual_robot_dashboard.json
hub/robot_overlay/: 99-realsense-usb-power.rules  bootstrap_go2.sh  focus_ros_sender.py  focus_sender.py  install_go2_host_config.sh  install_yunji_tinynav_runtime.sh  odin1_driver_headless.launch.py  odin1_sender.py  odin1_tinynav_adapter.py  prepare_yunji_odin1_calibration_driver.sh  receiver_dryrun.py  ros_image_frame_alias.py  run_live_rehearsal.sh  run_tinynav_buildmap_live.py  run_tinynav_buildmap_online_mapping.py  run_yunji_mapping_observation.sh  run_yunji_tinynav_component.sh  run_yunji_tinynav_planner.py  save_go2_buildmap.sh  set_realsense_power.sh  start_go2_buildmap.sh  start_go2_observation.sh  start_tinynav_buildmap_online_nav.sh  start_wsj_buildmap_v2.sh  start_wsj_calibration_observation.sh  start_wsj_command_observation.sh  start_wsj_mapping_session.sh  start_yunji_v2.sh  (+14 more)
(+343 files in other folders)
